convert to Java 17.