@@ -60,7 +60,7 @@ public class SpotifyOAuth2ServiceImpl implements SpotifyOAuth2Service {
     public SpotifyUserDto getAccessToken(HttpServletRequest request, String authCode) {
 
         // get Apps and client credentials From DB
-        var allOAuth2Info = oAuth2Service.getAllInfoFromAppName(ProjectConstants.SPOTIFY_APP_NAME).getFirst();
+        var allOAuth2Info = oAuth2Service.getAllInfoFromAppName(ProjectConstants.SPOTIFY_APP_NAME).get(0);
 
         // rest call to spotify for AccessToken
         if (allOAuth2Info == null) {
@@ -221,7 +221,7 @@ public class SpotifyOAuth2ServiceImpl implements SpotifyOAuth2Service {
     }
 
     private AllOAuth2Info getAllOAuth2Info() {
-        return oAuth2Service.getAllInfoFromAppName(ProjectConstants.SPOTIFY_APP_NAME).getFirst();
+        return oAuth2Service.getAllInfoFromAppName(ProjectConstants.SPOTIFY_APP_NAME).get(0);
     }
 
     @Override
