@@ -24,11 +24,11 @@ public class UriBuilderServiceImpl implements UriBuilderService {
     public String getSpotifyUri(HttpServletRequest request) {
         var allOAuth2Infos = oAuth2Service.getAllInfoFromAppName(ProjectConstants.SPOTIFY_APP_NAME);
 
-        return allOAuth2Infos.getFirst().oAuth2Apps().getAuthTokenUrl() + "?"
+        return allOAuth2Infos.get(0).oAuth2Apps().getAuthTokenUrl() + "?"
                 + ProjectConstants.SPOTIFY_PARAMETER_RESPONSE_TYPE_NAME
                 + "=" + ProjectConstants.SPOTIFY_RESPONSE_TYPE_VALUE + "&"
                 + ProjectConstants.SPOTIFY_PARAMETER_CLIENT_ID_NAME
-                + "=" + allOAuth2Infos.getFirst().client().getClientId() + "&"
+                + "=" + allOAuth2Infos.get(0).client().getClientId() + "&"
                 + ProjectConstants.SPOTIFY_PARAMETER_REDIRECT_URI_NAME +
                 "=" + getRedirectUri(request, ProjectConstants.SPOTIFY_APP_NAME) + "&"
                 + ProjectConstants.SPOTIFY_PARAMETER_SCOPE_NAME + "="
@@ -48,13 +48,13 @@ public class UriBuilderServiceImpl implements UriBuilderService {
     public String getYoutubeUri(HttpServletRequest request) {
         var allOAuth2Infos = oAuth2Service.getAllInfoFromAppName(ProjectConstants.YOUTUBE_APP_NAME);
 
-        return allOAuth2Infos.getFirst().oAuth2Apps().getAuthTokenUrl() + "?"
+        return allOAuth2Infos.get(0).oAuth2Apps().getAuthTokenUrl() + "?"
                 + ProjectConstants.YOUTUBE_PARAMETER_SCOPE_NAME
                 + "=" + getScope(allOAuth2Infos) + "&"
                 + ProjectConstants.YOUTUBE_PARAMETER_RESPONSE_TYPE_NAME
                 + "=" + ProjectConstants.YOUTUBE_RESPONSE_TYPE_VALUE + "&"
                 + ProjectConstants.YOUTUBE_PARAMETER_CLIENT_ID_NAME
-                + "=" + allOAuth2Infos.getFirst().client().getClientId() + "&"
+                + "=" + allOAuth2Infos.get(0).client().getClientId() + "&"
                 + ProjectConstants.YOUTUBE_PARAMETER_REDIRECT_URI_NAME
                 + "=" + getRedirectUri(request, ProjectConstants.YOUTUBE_APP_NAME) + "&"
                 + ProjectConstants.YOUTUBE_PARAMETER_ACCESS_TYPE_NAME
